Made the signalr broker work properly in SDK and Service Bus.

--- a/Teleopti.Ccc.SmartClientPortal/Teleopti.Common.UI.SmartPartControls/Teleopti.Common.UI.SmartPartControls.csproj
+++ b/Teleopti.Ccc.SmartClientPortal/Teleopti.Common.UI.SmartPartControls/Teleopti.Common.UI.SmartPartControls.csproj
@@ -232,6 +232,10 @@
     </CodeAnalysisDictionary>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Domain\Teleopti.Ccc.Domain.csproj">
+      <Project>{ADD1BCDC-CFBB-4632-8FB5-4FF3BD04F666}</Project>
+      <Name>Teleopti.Ccc.Domain</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Teleopti.Messaging\Teleopti.Core\Teleopti.Core.csproj">
       <Project>{7C03979A-6973-4D71-BF6B-27585CC933B5}</Project>
       <Name>Teleopti.Core</Name>
