--- a/Win/Teleopti.Ccc.Win.csproj
+++ b/Win/Teleopti.Ccc.Win.csproj
@@ -406,6 +406,7 @@
     <Compile Include="Budgeting\EditShrinkageForm.Designer.cs">
       <DependentUpon>EditShrinkageForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Common\ExternalExceptionHandler.cs" />
     <Compile Include="Common\Configuration\AuditingPage.cs">
       <SubType>UserControl</SubType>
     </Compile>
