--- a/Teleopti.Ccc.DayOffPlanningTest/Teleopti.Ccc.DayOffPlanningTest.csproj
+++ b/Teleopti.Ccc.DayOffPlanningTest/Teleopti.Ccc.DayOffPlanningTest.csproj
@@ -128,6 +128,8 @@
     <Compile Include="ExtendReduceDaysOffDecisionMakerTest.cs" />
     <Compile Include="ExtendReduceTimeDecisionMakerTest.cs" />
     <Compile Include="LockableBitArrayChangesTrackerTest.cs" />
+    <Compile Include="Scheduling\DesiredShiftLengthCalculatorTest.cs" />
+    <Compile Include="Scheduling\ShiftLengthDeciderTest.cs" />
     <Compile Include="TuiCaseSolverTest.cs" />
     <Compile Include="WorkShiftBackToLegalStateBitArrayCreatorTest.cs" />
     <Compile Include="WorkShiftLegalStatePeriodDecisionMakerTest.cs" />
