--- a/Teleopti.Messaging/Teleopti.Interfaces/Teleopti.Interfaces.csproj
+++ b/Teleopti.Messaging/Teleopti.Interfaces/Teleopti.Interfaces.csproj
@@ -287,6 +287,7 @@
     <Compile Include="Domain\IShiftCategoryLimitationChecker.cs" />
     <Compile Include="Domain\IShiftCreatorService.cs" />
     <Compile Include="Domain\IShiftFromMasterActivityService.cs" />
+    <Compile Include="Domain\IShiftLengthDecider.cs" />
     <Compile Include="Domain\IShiftProjectionCache.cs" />
     <Compile Include="Domain\IShiftProjectionCacheManager.cs" />
     <Compile Include="Domain\IShiftProjectionCasheFilter.cs" />
