--- a/Teleopti.Ccc.UserTexts/Teleopti.Ccc.UserTexts.csproj
+++ b/Teleopti.Ccc.UserTexts/Teleopti.Ccc.UserTexts.csproj
@@ -122,22 +122,36 @@
   <ItemGroup>
     <EmbeddedResource Include="Resources.cs.resx" />
     <EmbeddedResource Include="Resources.da.resx" />
-    <EmbeddedResource Include="Resources.de.resx" />
+    <EmbeddedResource Include="Resources.de.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Resources.el.resx" />
     <EmbeddedResource Include="Resources.en-ZW.resx" />
-    <EmbeddedResource Include="Resources.es.resx" />
+    <EmbeddedResource Include="Resources.es.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Resources.fi.resx" />
-    <EmbeddedResource Include="Resources.fr.resx" />
-    <EmbeddedResource Include="Resources.id.resx" />
-    <EmbeddedResource Include="Resources.no.resx" />
-    <EmbeddedResource Include="Resources.pt.resx" />
+    <EmbeddedResource Include="Resources.fr.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources.id.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources.no.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources.pt.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Resources.ru.resx" />
     <EmbeddedResource Include="Resources.sk.resx" />
     <EmbeddedResource Include="Resources.sq.resx" />
     <EmbeddedResource Include="Resources.th.resx" />
     <EmbeddedResource Include="Resources.tr.resx" />
     <EmbeddedResource Include="Resources.uz.resx" />
-    <EmbeddedResource Include="Resources.zh-CN.resx" />
+    <EmbeddedResource Include="Resources.zh-CN.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Resources.it.resx" />
     <EmbeddedResource Include="Resources.ar.resx">
       <SubType>Designer</SubType>
