--- a/Teleopti.Ccc.ApplicationConfig/Teleopti.Ccc.ApplicationConfig.csproj
+++ b/Teleopti.Ccc.ApplicationConfig/Teleopti.Ccc.ApplicationConfig.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Creators\PersonCreator.cs" />
     <Compile Include="Creators\RtaStateGroupCreator.cs" />
     <Compile Include="Creators\ScenarioCreator.cs" />
+    <Compile Include="Creators\SetChangeInfoCommand.cs" />
     <Compile Include="Creators\SkillTypeCreator.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Program.cs" />
