--- a/Teleopti.Analytics/WebPortal/Teleopti.Analytics.Portal/Teleopti.Analytics.Portal/Teleopti.Analytics.Portal.csproj
+++ b/Teleopti.Analytics/WebPortal/Teleopti.Analytics.Portal/Teleopti.Analytics.Portal/Teleopti.Analytics.Portal.csproj
@@ -95,6 +95,7 @@
     <Content Include="PmContainer.aspx" />
     <Content Include="ReportViewer.aspx" />
     <Content Include="Selection.aspx" />
+    <Content Include="Timeout.aspx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -219,6 +220,13 @@
     </Compile>
     <Compile Include="Reports\Ccc\report_agent_schedule_adherence.aspx.designer.cs">
       <DependentUpon>report_agent_schedule_adherence.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Timeout.aspx.cs">
+      <DependentUpon>Timeout.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Timeout.aspx.designer.cs">
+      <DependentUpon>Timeout.aspx</DependentUpon>
     </Compile>
     <Compile Include="Utils\AppKeyReader.cs" />
     <Compile Include="CultureCompare.cs" />
