Improved handling of SignalR
--HG--
branch : Release 7.1.358

--- a/Teleopti.Messaging/Teleopti.Messaging/Teleopti.Messaging.csproj
+++ b/Teleopti.Messaging/Teleopti.Messaging/Teleopti.Messaging.csproj
@@ -293,6 +293,7 @@
     </Compile>
     <Compile Include="SignalR\SignalBroker.cs" />
     <Compile Include="SignalR\SignalSender.cs" />
+    <Compile Include="SignalR\SignalWrapper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Teleopti.Core\Teleopti.Core.csproj">
