Enabled testing for commands. (Will break build with coverage)

--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Logic/Teleopti.Ccc.Sdk.Logic.csproj
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Logic/Teleopti.Ccc.Sdk.Logic.csproj
@@ -95,12 +95,14 @@
     <Reference Include="System.Runtime.Serialization">
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AgentPortalSettings.cs" />
     <Compile Include="Assemblers\AbsenceAssembler.cs" />
     <Compile Include="Assemblers\AbsenceRequestAssembler.cs" />
     <Compile Include="Assemblers\ActivityLayerAssembler.cs" />
@@ -158,7 +160,32 @@
     <Compile Include="Assemblers\StudentAvailabilityAssembler.cs" />
     <Compile Include="Assemblers\TextRequestAssembler.cs" />
     <Compile Include="Assemblers\WorkflowControlSetAssembler.cs" />
+    <Compile Include="CommandHandler\AddAbsenceCommandHandler.cs" />
+    <Compile Include="CommandHandler\AddActivityCommandHandler.cs" />
+    <Compile Include="CommandHandler\AddDayOffCommandHandler.cs" />
+    <Compile Include="CommandHandler\AddOvertimeCommandHandler.cs" />
+    <Compile Include="CommandHandler\ApproveRequestCommandHandler.cs" />
+    <Compile Include="CommandHandler\CancelAbsenceCommandHandler.cs" />
+    <Compile Include="CommandHandler\CancelOvertimeCommandHandler.cs" />
+    <Compile Include="CommandHandler\ChangePersonEmploymentCommandHandler.cs" />
+    <Compile Include="CommandHandler\ClearMainShiftCommandHandler.cs" />
+    <Compile Include="CommandHandler\CreatePayrollExportCommandHandler.cs" />
+    <Compile Include="CommandHandler\DeletePersonAccountForPersonCommandHandler.cs" />
+    <Compile Include="CommandHandler\DenormalizeNotificationCommandHandler.cs" />
+    <Compile Include="CommandHandler\DenormalizeScheduleCommandHandler.cs" />
+    <Compile Include="CommandHandler\DenyRequestCommandHandler.cs" />
+    <Compile Include="CommandHandler\EmployPersonCommandHandler.cs" />
+    <Compile Include="CommandHandler\ExportMultisiteSkillToSkillCommandHandler.cs" />
+    <Compile Include="CommandHandler\IHandleCommand.cs" />
+    <Compile Include="CommandHandler\ImportForecastsFileCommandHandler.cs" />
+    <Compile Include="CommandHandler\NewMainShiftCommandHandler.cs" />
+    <Compile Include="CommandHandler\SaveAgentPortalSettingsCommandHandler.cs" />
+    <Compile Include="CommandHandler\SavePersonAbsenceRequestCommandHandler.cs" />
+    <Compile Include="CommandHandler\SetPersonAccountForPersonCommandHandler.cs" />
     <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="IPayrollResultFactory.cs" />
+    <Compile Include="IPersistPersonRequest.cs" />
+    <Compile Include="IServiceBusSender.cs" />
     <Compile Include="Payroll\PayrollFormatHandler.cs" />
     <Compile Include="Payroll\PayrollResultService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -170,11 +197,16 @@
     <Compile Include="Restrictions\PreferenceNightRestChecker.cs" />
     <Compile Include="Restrictions\RestrictionsValidator.cs" />
     <Compile Include="Restrictions\PlanningTimeBankCalculator.cs" />
+    <Compile Include="SaveSchedulePartService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Domain\Teleopti.Ccc.Domain.csproj">
       <Project>{ADD1BCDC-CFBB-4632-8FB5-4FF3BD04F666}</Project>
       <Name>Teleopti.Ccc.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Infrastructure\Teleopti.Ccc.Infrastructure.csproj">
+      <Project>{AA4A5374-77AF-44F0-85C1-6CABC6701352}</Project>
+      <Name>Teleopti.Ccc.Infrastructure</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Teleopti.Ccc.Payroll\Teleopti.Ccc.PayrollFormatter\Teleopti.Ccc.PayrollFormatter.csproj">
       <Project>{D3A96039-45CD-42CA-BCEC-1AE495651082}</Project>
