--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Service/Teleopti.Ccc.Sdk.Service.csproj
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Service/Teleopti.Ccc.Sdk.Service.csproj
@@ -169,49 +169,23 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AsyncResult.cs" />
-    <Compile Include="CommandHandler\AddAbsenceCommandHandler.cs" />
-    <Compile Include="CommandHandler\AddActivityCommandHandler.cs" />
-    <Compile Include="CommandHandler\AddDayOffCommandHandler.cs" />
-    <Compile Include="CommandHandler\AddOvertimeCommandHandler.cs" />
-    <Compile Include="CommandHandler\CancelAbsenceCommandHandler.cs" />
-    <Compile Include="CommandHandler\CancelOvertimeCommandHandler.cs" />
-    <Compile Include="CommandHandler\ChangePersonEmploymentCommandHandler.cs" />
-    <Compile Include="CommandHandler\ClearMainShiftCommandHandler.cs" />
-    <Compile Include="CommandHandler\DenormalizeNotificationCommandHandler.cs" />
-    <Compile Include="CommandHandler\DenormalizeScheduleCommandHandler.cs" />
-    <Compile Include="CommandHandler\ImportForecastsFileCommandHandler.cs" />
-    <Compile Include="CommandHandler\SaveAgentPortalSettingsCommandHandler.cs" />
-    <Compile Include="CommandHandler\EmployPersonCommandHandler.cs" />
-    <Compile Include="CommandHandler\NewMainShiftCommandHandler.cs" />
-    <Compile Include="CommandHandler\SavePersonAbsenceRequestCommandHandler.cs" />
-    <Compile Include="CommandHandler\CreatePayrollExportCommandHandler.cs" />
-    <Compile Include="CommandHandler\DeletePersonAccountForPersonCommandHandler.cs" />
-    <Compile Include="CommandHandler\SetPersonAccountForPersonCommandHandler.cs" />
-    <Compile Include="CommandHandler\ExportMultisiteSkillToSkillCommandHandler.cs" />
-    <Compile Include="CommandHandler\DenyRequestCommandHandler.cs" />
-    <Compile Include="CommandHandler\ApproveRequestCommandHandler.cs" />
-    <Compile Include="CommandHandler\IHandleCommand.cs" />
-    <Compile Include="CommandHandler\IInvokeCommand.cs" />
-    <Compile Include="CommandHandler\InvokeCommand.cs" />
-    <Compile Include="CommandHandler\CommandHandlerModule.cs" />
+    <Compile Include="CommandHandlerModule.cs" />
     <Compile Include="CreateScheduleDistributionAsyncResult.cs" />
     <Compile Include="Factory\AbsenceTypeFactory.cs" />
     <Compile Include="Factory\AcceptPreviouslyReferredShiftTradeCommand.cs" />
     <Compile Include="Factory\ActivityTypeFactory.cs" />
-    <Compile Include="Factory\AgentPortalSettings.cs" />
     <Compile Include="Factory\AnalyticsReportsFactory.cs" />
     <Compile Include="Factory\AuthenticationFactory.cs" />
     <Compile Include="Factory\ContractFactory.cs" />
     <Compile Include="Factory\ContractScheduleFactory.cs" />
     <Compile Include="Factory\IAuthorizationProvider.cs" />
-    <Compile Include="Factory\IPersistPersonRequest.cs" />
     <Compile Include="Factory\LargeForecastsRowCollectionSerializer.cs" />
+    <Compile Include="Factory\MessageBrokerEnablerFactory.cs" />
     <Compile Include="Factory\PersistPersonRequest.cs" />
     <Compile Include="Factory\PlanningTimeBankFactory.cs" />
     <Compile Include="Factory\PreferenceRestrictionConstructor.cs" />
     <Compile Include="Factory\PublicNoteTypeFactory.cs" />
     <Compile Include="Factory\IPersonRequestFactory.cs" />
-    <Compile Include="Factory\IServiceBusSender.cs" />
     <Compile Include="Factory\LargeGuidCollectionSerializer.cs" />
     <Compile Include="Factory\MessageBrokerSendEnabler.cs" />
     <Compile Include="Factory\OvertimeDefinitionFactory.cs" />
@@ -219,7 +193,6 @@
     <Compile Include="Factory\PersonRequestedShiftTrade.cs" />
     <Compile Include="Factory\PersonsFromLoadOptionFactory.cs" />
     <Compile Include="Factory\DateOnlyPeriodSerializer.cs" />
-    <Compile Include="Factory\SaveSchedulePartService.cs" />
     <Compile Include="Factory\ServiceBusSender.cs" />
     <Compile Include="Factory\ShiftCategoryFactory.cs" />
     <Compile Include="Factory\DayOffFactory.cs" />
@@ -246,6 +219,8 @@
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Factory\LicenseFactory.cs" />
     <Compile Include="Factory\PersonRequestFactory.cs" />
+    <Compile Include="IInvokeCommand.cs" />
+    <Compile Include="InvokeCommand.cs" />
     <Compile Include="LogOn\ApplicationDataSourceFromToken.cs" />
     <Compile Include="LogOn\ApplicationUserFromToken.cs" />
     <Compile Include="LogOn\BusinessUnitCache.cs" />
