--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Logic/Teleopti.Ccc.Sdk.Logic.csproj
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Logic/Teleopti.Ccc.Sdk.Logic.csproj
@@ -189,6 +189,23 @@
     <Compile Include="Payroll\PayrollFormatHandler.cs" />
     <Compile Include="Payroll\PayrollResultService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryHandler\GetAgentPortalSettingsQueryHandler.cs" />
+    <Compile Include="QueryHandler\GetAllPayrollExportsQueryHandler.cs" />
+    <Compile Include="QueryHandler\GetAvailableGroupPagesQueryHandler.cs" />
+    <Compile Include="QueryHandler\GetBusinessUnitByIdQueryHandler.cs" />
+    <Compile Include="QueryHandler\GetGroupsForGroupPageAtDateQueryHandler.cs" />
+    <Compile Include="QueryHandler\GetPayrollResultStatusByExportIdQueryHandler.cs" />
+    <Compile Include="QueryHandler\GetPayrollResultStatusByIdQueryHandler.cs" />
+    <Compile Include="QueryHandler\GetPeopleByGroupPageGroupQueryHandler.cs" />
+    <Compile Include="QueryHandler\GetPersonByEmploymentNumberQueryHandler.cs" />
+    <Compile Include="QueryHandler\GetPersonByIdQueryHandler.cs" />
+    <Compile Include="QueryHandler\GetSiteByDescriptionNameQueryHandler.cs" />
+    <Compile Include="QueryHandler\GetSiteByIdQueryHandler.cs" />
+    <Compile Include="QueryHandler\GetTeamByDescriptionNameQueryHandler.cs" />
+    <Compile Include="QueryHandler\GetTeamByIdQueryHandler.cs" />
+    <Compile Include="QueryHandler\GetValidatedSchedulePartsForPreferenceQueryHandler.cs" />
+    <Compile Include="QueryHandler\GetValidatedSchedulePartsForStudentAvailabilityQueryHandler.cs" />
+    <Compile Include="QueryHandler\IHandleQuery.cs" />
     <Compile Include="Restrictions\IIsEditablePredicate.cs" />
     <Compile Include="Restrictions\IsEditablePredicate.cs" />
     <Compile Include="Restrictions\MinMaxWorkTimeChecker.cs" />
