Added yet another test.

--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Common/Teleopti.Ccc.Sdk.Common.csproj
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Common/Teleopti.Ccc.Sdk.Common.csproj
@@ -184,6 +184,7 @@
     <Compile Include="DataTransferObject\PersonPeriodLoadOptionDto.cs" />
     <Compile Include="DataTransferObject\PersonSkillPeriodDto.cs" />
     <Compile Include="DataTransferObject\PublicNoteDto.cs" />
+    <Compile Include="DataTransferObject\QueryDtos\GetAllScenariosQueryDto.cs" />
     <Compile Include="DataTransferObject\QueryDtos\GetValidatedSchedulePartsForStudentAvailabilityQueryDto.cs" />
     <Compile Include="DataTransferObject\QueryDtos\GetAgentPortalSettingsQueryDto.cs" />
     <Compile Include="DataTransferObject\QueryDtos\GetAllPayrollExportsQueryDto.cs" />
