--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.LogicTest/Teleopti.Ccc.Sdk.LogicTest.csproj
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.LogicTest/Teleopti.Ccc.Sdk.LogicTest.csproj
@@ -182,7 +182,6 @@
     <Compile Include="OldTests\PersonalShiftDtoTest.cs" />
     <Compile Include="OldTests\PersonRequestDtoTest.cs" />
     <Compile Include="OldTests\QueueDtoTest.cs" />
-    <Compile Include="OldTests\ScenarioDtoTest.cs" />
     <Compile Include="OldTests\SchedulePartDtoTest.cs" />
     <Compile Include="OldTests\LogOn.cs">
       <SubType>Code</SubType>
@@ -193,6 +192,7 @@
     <Compile Include="Payroll\PayrollFormatHandlerTest.cs" />
     <Compile Include="Payroll\PayrollResultServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryHandler\GetAllPayrollExportsQueryHandlerTest.cs" />
     <Compile Include="QueryHandler\GetAllScenariosQueryHandlerTest.cs" />
     <Compile Include="QueryHandler\GetAgentPortalSettingsQueryHandlerTest.cs" />
     <Compile Include="Restrictions\PlanningTimeBankCalculatorTest.cs" />
