--- a/Teleopti.Analytics/Teleopti.Analytics.Etl.Transformer/Teleopti.Analytics.Etl.Transformer.csproj
+++ b/Teleopti.Analytics/Teleopti.Analytics.Etl.Transformer/Teleopti.Analytics.Etl.Transformer.csproj
@@ -129,6 +129,7 @@
     <Compile Include="Job\Steps\FactRequestedDaysJobStep.cs" />
     <Compile Include="Job\Steps\FactRequestJobStep.cs" />
     <Compile Include="Job\Jobs\RequestJobCollection.cs" />
+    <Compile Include="Job\Steps\StatisticsUpdateNotificationJobStep.cs" />
     <Compile Include="RequestTransformer.cs" />
     <Compile Include="Job\Steps\StageRequestJobStep.cs" />
     <Compile Include="Job\Steps\DimOvertimeJobStep.cs" />
