--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.LogicTest/Teleopti.Ccc.Sdk.LogicTest.csproj
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.LogicTest/Teleopti.Ccc.Sdk.LogicTest.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Payroll\PayrollFormatHandlerTest.cs" />
     <Compile Include="Payroll\PayrollResultServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryHandler\GetAvailableCustomGroupPagesQueryHandlerTest.cs" />
     <Compile Include="QueryHandler\GetAllPayrollExportsQueryHandlerTest.cs" />
     <Compile Include="QueryHandler\GetAllScenariosQueryHandlerTest.cs" />
     <Compile Include="QueryHandler\GetAgentPortalSettingsQueryHandlerTest.cs" />
