--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.LogicTest/Teleopti.Ccc.Sdk.LogicTest.csproj
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.LogicTest/Teleopti.Ccc.Sdk.LogicTest.csproj
@@ -192,7 +192,9 @@
     <Compile Include="Payroll\PayrollFormatHandlerTest.cs" />
     <Compile Include="Payroll\PayrollResultServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QueryHandler\Copy of GetAllScenariosQueryHandlerTest.cs" />
+    <Compile Include="QueryHandler\GetPayrollResultStatusByExportIdQueryHandlerTest.cs" />
+    <Compile Include="QueryHandler\GetGroupsForGroupPageAtDateQueryHandlerTest.cs" />
+    <Compile Include="QueryHandler\GetCurrentBusinessUnitQueryHandlerTest.cs" />
     <Compile Include="QueryHandler\GetAvailableCustomGroupPagesQueryHandlerTest.cs" />
     <Compile Include="QueryHandler\GetAllPayrollExportsQueryHandlerTest.cs" />
     <Compile Include="QueryHandler\GetAllScenariosQueryHandlerTest.cs" />
