--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.LogicTest/Teleopti.Ccc.Sdk.LogicTest.csproj
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.LogicTest/Teleopti.Ccc.Sdk.LogicTest.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Payroll\PayrollFormatHandlerTest.cs" />
     <Compile Include="Payroll\PayrollResultServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryHandler\GetPayrollResultStatusByIdQueryHandlerTest.cs" />
     <Compile Include="QueryHandler\GetPayrollResultStatusByExportIdQueryHandlerTest.cs" />
     <Compile Include="QueryHandler\GetGroupsForGroupPageAtDateQueryHandlerTest.cs" />
     <Compile Include="QueryHandler\GetCurrentBusinessUnitQueryHandlerTest.cs" />
