--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.LogicTest/Teleopti.Ccc.Sdk.LogicTest.csproj
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.LogicTest/Teleopti.Ccc.Sdk.LogicTest.csproj
@@ -192,6 +192,13 @@
     <Compile Include="Payroll\PayrollFormatHandlerTest.cs" />
     <Compile Include="Payroll\PayrollResultServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryHandler\GetTeamByIdQueryHandlerTest.cs" />
+    <Compile Include="QueryHandler\GetSiteByIdQueryHandlerTest.cs" />
+    <Compile Include="QueryHandler\GetTeamByDescriptionNameQueryHandlerTest.cs" />
+    <Compile Include="QueryHandler\GetSiteByDescriptionNameQueryHandlerTest.cs" />
+    <Compile Include="QueryHandler\GetPersonByIdQueryHandlerTest.cs" />
+    <Compile Include="QueryHandler\GetPersonByEmploymentNumberQueryHandlerTest.cs" />
+    <Compile Include="QueryHandler\GetPeopleByGroupPageGroupQueryHandlerTest.cs" />
     <Compile Include="QueryHandler\GetPayrollResultStatusByIdQueryHandlerTest.cs" />
     <Compile Include="QueryHandler\GetPayrollResultStatusByExportIdQueryHandlerTest.cs" />
     <Compile Include="QueryHandler\GetGroupsForGroupPageAtDateQueryHandlerTest.cs" />
