--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Logic/Teleopti.Ccc.Sdk.Logic.csproj
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Logic/Teleopti.Ccc.Sdk.Logic.csproj
@@ -198,6 +198,7 @@
     <Compile Include="QueryHandler\GetPayrollResultStatusByExportIdQueryHandler.cs" />
     <Compile Include="QueryHandler\GetPayrollResultStatusByIdQueryHandler.cs" />
     <Compile Include="QueryHandler\GetPeopleByGroupPageGroupQueryHandler.cs" />
+    <Compile Include="QueryHandler\GetPeopleForShiftTradeByGroupPageGroupQueryHandler.cs" />
     <Compile Include="QueryHandler\GetPersonByEmploymentNumberQueryHandler.cs" />
     <Compile Include="QueryHandler\GetPersonByIdQueryHandler.cs" />
     <Compile Include="QueryHandler\GetSiteByDescriptionNameQueryHandler.cs" />
