--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Service/Teleopti.Ccc.Sdk.Service.csproj
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Service/Teleopti.Ccc.Sdk.Service.csproj
@@ -238,6 +238,7 @@
     <Compile Include="LogOn\WindowsDataSourceFromToken.cs" />
     <Compile Include="LogOn\WindowsTokenAuthenticator.cs" />
     <Compile Include="LogOn\WindowsUserFromToken.cs" />
+    <Compile Include="QueryHandlerModule.cs" />
     <Compile Include="TeleoptiCccSdkService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
