Bug #18976 second shot...
--HG--
branch : Release 7.1.358

--- a/Teleopti.Analytics/WebPortal/Teleopti.Analytics.Portal/Teleopti.Analytics.Portal/Teleopti.Analytics.Portal.csproj
+++ b/Teleopti.Analytics/WebPortal/Teleopti.Analytics.Portal/Teleopti.Analytics.Portal/Teleopti.Analytics.Portal.csproj
@@ -234,6 +234,7 @@
     <Compile Include="Utils\HelpLinkBuilder.cs" />
     <Compile Include="Utils\ImpersonatedUser.cs" />
     <Compile Include="Utils\Login.cs" />
+    <Compile Include="Utils\StateHolder.cs" />
     <Compile Include="Utils\TextLoader.cs">
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
