refact so that PermissionProvider uses IPrincipalProvider

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Teleopti.Ccc.Web.csproj
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Teleopti.Ccc.Web.csproj
@@ -237,10 +237,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Core\RequestContext\CurrentDataSourceProvider.cs" />
-    <Compile Include="Core\RequestContext\CurrentPrincipalProvider.cs" />
+    <Compile Include="Core\RequestContext\PrincipalProvider.cs" />
     <Compile Include="Core\RequestContext\ICultureProvider.cs" />
     <Compile Include="Core\RequestContext\ICurrentDataSourceProvider.cs" />
-    <Compile Include="Core\RequestContext\ICurrentPrincipalProvider.cs" />
+    <Compile Include="Core\RequestContext\IPrincipalProvider.cs" />
     <Compile Include="Core\RequestContext\ISessionSpecificDataStringSerializer.cs" />
     <Compile Include="Core\RequestContext\SessionSpecificDataStringSerializer.cs" />
     <Compile Include="Core\Aop\Aspects\UnitOfWorkAspect.cs" />
