--- a/BuildArtifacts/AppETLService.config
+++ b/BuildArtifacts/AppETLService.config
@@ -34,6 +34,9 @@
 		<logger name="Teleopti.Analytics.Etl.Transformer.Job.JobStepBase">
 			<level value="WARN" />
 		</logger>
+		<logger name="Teleopti.Analytics.Etl.ServiceLogic.EtlJobStarter">
+			<level value="WARN" />
+		</logger>
 
 	</log4net>
 
