--- a/Domain/Teleopti.Ccc.Domain.csproj
+++ b/Domain/Teleopti.Ccc.Domain.csproj
@@ -806,6 +806,7 @@
     <Compile Include="Security\Principal\PrincipalAuthorization.cs" />
     <Compile Include="Security\Principal\Regional.cs" />
     <Compile Include="Security\Principal\RoleToClaimSetTransformer.cs" />
+    <Compile Include="Security\Principal\ITeleoptiIdentity.cs" />
     <Compile Include="Security\Principal\TeleoptiIdentity.cs" />
     <Compile Include="Security\Principal\TeleoptiPrincipal.cs" />
     <Compile Include="Security\Principal\UnsafePersonProvider.cs" />
