--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Teleopti.Ccc.Web.csproj
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Teleopti.Ccc.Web.csproj
@@ -238,10 +238,10 @@
     <Compile Include="Core\RequestContext\CultureProvider.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Core\RequestContext\CurrentDataSourceProvider.cs" />
+    <Compile Include="Core\RequestContext\DataSourceProvider.cs" />
     <Compile Include="Core\RequestContext\PrincipalProvider.cs" />
     <Compile Include="Core\RequestContext\ICultureProvider.cs" />
-    <Compile Include="Core\RequestContext\ICurrentDataSourceProvider.cs" />
+    <Compile Include="Core\RequestContext\IDataSourceProvider.cs" />
     <Compile Include="Core\RequestContext\IPrincipalProvider.cs" />
     <Compile Include="Core\RequestContext\ISessionSpecificDataStringSerializer.cs" />
     <Compile Include="Core\RequestContext\SessionSpecificDataStringSerializer.cs" />
