--- a/BuildArtifacts/AppETLService.config
+++ b/BuildArtifacts/AppETLService.config
@@ -13,13 +13,13 @@
     <!--WISEMETA: value="[PM_INSTALL]"-->
     <add key="pmInstallation" value="False"/>
     <!--WISEMETA: value="[SQL_AUTH_STRING];Application Name=Teleopti.Analytics.Etl.Service;Initial Catalog=[DB_ANALYTICS]"-->
-    <add key="datamartConnectionString" value="Data Source=.;Integrated Security=True;Persist Security Info=False;Initial Catalog=TeleoptiAnalytics"/>
+    <add key="datamartConnectionString" value="Data Source=.;Integrated Security=True;Initial Catalog=$(AnalyticsDB)"/>
     <!--WISEMETA: value="[SQL_AUTH_STRING];Application Name=Teleopti.Analytics.Etl.Service;Initial Catalog=[DB_ANALYTICS]"-->
-    <add key="MessageBroker" value="Data Source=.;Integrated Security=True;Persist Security Info=False;Initial Catalog=TeleoptiAnalytics"/>
+    <add key="MessageBroker" value="Data Source=.;Integrated Security=True;Initial Catalog=$(AnalyticsDB)"/>
     <!--WISEMETA: value="Provider=MSOLAP.3;Integrated Security=SSPI;Persist Security Info=True;Data Source=[AS_SERVER_NAME];Initial Catalog=[AS_DATABASE];Client Cache Size=25;Auto Synch Period=10000"-->
-    <add key="Cube" value="Provider=MSOLAP.3;Integrated Security=SSPI;Persist Security Info=True;Data Source=.;Initial Catalog=TeleoptiAnalytics;Client Cache Size=25;Auto Synch Period=10000"/>
+    <add key="Cube" value="Provider=MSOLAP.3;Integrated Security=SSPI;Persist Security Info=True;Data Source=.;Initial Catalog=$(AnalyticsDB);Client Cache Size=25;Auto Synch Period=10000"/>
   </appSettings>
-
+  
 	<log4net>
 		<appender name="EventAppender" type="log4net.Appender.EventLogAppender" >
 			<applicationName value="TeleoptiETLService" />
