Added new query to get schedule for one person.

--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Logic/Teleopti.Ccc.Sdk.Logic.csproj
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Logic/Teleopti.Ccc.Sdk.Logic.csproj
@@ -203,6 +203,7 @@
     <Compile Include="QueryHandler\GetPeopleForShiftTradeByGroupPageGroupQueryHandler.cs" />
     <Compile Include="QueryHandler\GetPersonByEmploymentNumberQueryHandler.cs" />
     <Compile Include="QueryHandler\GetPersonByIdQueryHandler.cs" />
+    <Compile Include="QueryHandler\GetSchedulesByPersonQueryHandler.cs" />
     <Compile Include="QueryHandler\GetSchedulesByTeamQueryHandler.cs" />
     <Compile Include="QueryHandler\GetSiteByDescriptionNameQueryHandler.cs" />
     <Compile Include="QueryHandler\GetSiteByIdQueryHandler.cs" />
