--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.LogicTest/Teleopti.Ccc.Sdk.LogicTest.csproj
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.LogicTest/Teleopti.Ccc.Sdk.LogicTest.csproj
@@ -193,6 +193,7 @@
     <Compile Include="Payroll\PayrollFormatHandlerTest.cs" />
     <Compile Include="Payroll\PayrollResultServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryHandler\GetSchedulesByPersonQueryHandlerTest.cs" />
     <Compile Include="QueryHandler\GetPeopleForShiftTradeByGroupPageGroupQueryHandlerTest.cs" />
     <Compile Include="QueryHandler\GetSchedulesByTeamQueryHandlerTest.cs" />
     <Compile Include="QueryHandler\GetValidatedSchedulePartsForStudentAvailabilityQueryHandlerTest.cs" />
