Added the rest of the queries to use.

--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Common/Teleopti.Ccc.Sdk.Common.csproj
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Common/Teleopti.Ccc.Sdk.Common.csproj
@@ -184,10 +184,13 @@
     <Compile Include="DataTransferObject\PersonPeriodLoadOptionDto.cs" />
     <Compile Include="DataTransferObject\PersonSkillPeriodDto.cs" />
     <Compile Include="DataTransferObject\PublicNoteDto.cs" />
+    <Compile Include="DataTransferObject\QueryDtos\GetSchedulesByGroupPageGroupQueryHandlerDto.cs" />
+    <Compile Include="DataTransferObject\QueryDtos\GetSchedulesBySiteQueryHandlerDto.cs" />
     <Compile Include="DataTransferObject\QueryDtos\GetAllScenariosQueryDto.cs" />
     <Compile Include="DataTransferObject\QueryDtos\GetPeopleForShiftTradeByGroupPageGroupQueryDto.cs" />
     <Compile Include="DataTransferObject\QueryDtos\GetSchedulesByPersonQueryHandlerDto.cs" />
     <Compile Include="DataTransferObject\QueryDtos\GetSchedulesByTeamQueryHandlerDto.cs" />
+    <Compile Include="DataTransferObject\QueryDtos\GetSchedulesForAllPeopleQueryHandlerDto.cs" />
     <Compile Include="DataTransferObject\QueryDtos\GetValidatedSchedulePartsForStudentAvailabilityQueryDto.cs" />
     <Compile Include="DataTransferObject\QueryDtos\GetAgentPortalSettingsQueryDto.cs" />
     <Compile Include="DataTransferObject\QueryDtos\GetAllPayrollExportsQueryDto.cs" />
