--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Logic/Teleopti.Ccc.Sdk.Logic.csproj
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Logic/Teleopti.Ccc.Sdk.Logic.csproj
@@ -191,6 +191,9 @@
     <Compile Include="Payroll\PayrollFormatHandler.cs" />
     <Compile Include="Payroll\PayrollResultService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryHandler\GetSchedulesByGroupPageGroupQueryHandler.cs" />
+    <Compile Include="QueryHandler\GetSchedulesBySiteQueryHandler.cs" />
+    <Compile Include="QueryHandler\GetSchedulesForAllPeopleQueryHandler.cs" />
     <Compile Include="QueryHandler\GetAgentPortalSettingsQueryHandler.cs" />
     <Compile Include="QueryHandler\GetAllPayrollExportsQueryHandler.cs" />
     <Compile Include="QueryHandler\GetAllScenariosQueryHandler.cs" />
