--- a/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/Teleopti.Ccc.WebBehaviorTest.csproj
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/Teleopti.Ccc.WebBehaviorTest.csproj
@@ -71,12 +71,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bindings\ColleagueStepDefinitions.cs" />
     <Compile Include="AbsenceRequestFromSchedule.feature.cs">
-      <DependentUpon>AbsenceRequestFromSchedule.feature</DependentUpon>
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
+      <DependentUpon>AbsenceRequestFromSchedule.feature</DependentUpon>
     </Compile>
+    <Compile Include="Bindings\ColleagueStepDefinitions.cs" />
+    <Compile Include="AbsenceRequestFromScheduleStepDefinitions.cs" />
     <Compile Include="Core\TestMethods.cs" />
     <Compile Include="Data\User\ExistingAvailability.cs" />
     <Compile Include="Data\User\ExistingLunchPreferenceToday.cs" />
@@ -326,14 +327,14 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <None Include="AbsenceRequestFromSchedule.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>AbsenceRequestFromSchedule.feature.cs</LastGenOutput>
+    </None>
     <None Include="App.config" />
     <None Include="ApplicationStartRecovery.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>ApplicationStartRecovery.feature.cs</LastGenOutput>
-    </None>
-    <None Include="AbsenceRequestFromSchedule.feature">
-      <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>AbsenceRequestFromSchedule.feature.cs</LastGenOutput>
     </None>
     <None Include="MobileReports.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
