--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.LogicTest/Teleopti.Ccc.Sdk.LogicTest.csproj
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.LogicTest/Teleopti.Ccc.Sdk.LogicTest.csproj
@@ -103,6 +103,7 @@
     <Reference Include="System.Runtime.Serialization">
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -154,6 +155,27 @@
     <Compile Include="AssemblersTest\PersonDayOffAssemblerTest.cs" />
     <Compile Include="AssemblersTest\SchedulePartAssemblerTest.cs" />
     <Compile Include="AssemblersTest\WorkflowControlSetAssemblerTest.cs" />
+    <Compile Include="CommandHandler\AddAbsenceCommandHandlerTest.cs" />
+    <Compile Include="CommandHandler\AddActivityCommandHandlerTest.cs" />
+    <Compile Include="CommandHandler\AddDayOffCommandHandlerTest.cs" />
+    <Compile Include="CommandHandler\AddOvertimeCommandHandlerTest.cs" />
+    <Compile Include="CommandHandler\ApproveRequestCommandHandlerTest.cs" />
+    <Compile Include="CommandHandler\CancelAbsenceCommandHandlerTest.cs" />
+    <Compile Include="CommandHandler\CancelOvertimeCommandHandlerTest.cs" />
+    <Compile Include="CommandHandler\ChangePersonEmploymentCommandHandlerTest.cs" />
+    <Compile Include="CommandHandler\ClearMainShiftCommandHandlerTest.cs" />
+    <Compile Include="CommandHandler\CreatePayrollExportCommandHandlerTest.cs" />
+    <Compile Include="CommandHandler\DeletePersonAccountForPersonCommandHandlerTest.cs" />
+    <Compile Include="CommandHandler\DenormalizeNotificationCommandHandlerTest.cs" />
+    <Compile Include="CommandHandler\DenormalizeScheduleCommandHandlerTest.cs" />
+    <Compile Include="CommandHandler\DenyRequestCommandHandlerTest.cs" />
+    <Compile Include="CommandHandler\EmployPersonCommandHandlerTest.cs" />
+    <Compile Include="CommandHandler\ExportMultisiteSkillToSkillCommandHandlerTest.cs" />
+    <Compile Include="CommandHandler\ImportForecastsFileCommandHandlerTest.cs" />
+    <Compile Include="CommandHandler\NewMainShiftCommandHandlerTest.cs" />
+    <Compile Include="CommandHandler\SaveAgentPortalSettingsCommandHandlerTest.cs" />
+    <Compile Include="CommandHandler\SavePersonAbsenceRequestCommandHandlerTest.cs" />
+    <Compile Include="CommandHandler\SetPersonAccountForPersonCommandHandlerTest.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="OldTests\AbsenceDtoTest.cs" />
     <Compile Include="OldTests\AbsenceLayerDtoTest.cs" />
@@ -262,9 +284,7 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="CommandHandler\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
